fixing layout on small screens

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 .container {
-  height: 85vh;
+  height: 75vh;
   width: 100vw;
   display: flex;
   justify-content: center;
